<resources>
    <string name="app_name">Aprodite App</string>

    <!--    Splash Screen -->
    <string name="title_splash">Digital\nplatform\nfor managing</string>

    <string name="project_task_splash">project tasks</string>
    <string name="desc_splash">Manage tasks more practically.</string>
    <string name="desc2_splash">Make your team much more productive</string>


    <!--    Login Screen-->
    <string name="title_login">Log in</string>
    <string name="desc_login">Log in to Aprodite below and get your whole team organized</string>
    <string name="input">Enter Your Email</string>
    <string name="input_pw">Enter Your Password</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="remember_login">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_pw_login">Forgot password?</string>

    <!--    Dashboard Screen-->
    <string name="welcome">Welcome User !</string>

    <!--    Halaman list-->
    <string name="list_name">My Todo List</string>

    <!--   halaman profil -->
    <string name="profile">Halo i am User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>